refactored to 3 tier architecture.  mocking service calls in controller tests