@@ -19,14 +19,19 @@ repositories {
 }
 
 dependencies {
-	implementation("org.springframework.boot:spring-boot-starter-web")
 	implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
 	implementation("org.jetbrains.kotlin:kotlin-reflect")
 	implementation("org.springframework.boot:spring-boot-starter-webflux")
 	implementation("org.jetbrains.kotlinx:kotlinx-coroutines-reactor:1.7.3")
+
+	implementation("ch.qos.logback:logback-classic:1.4.11")
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
 	testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
-	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+	testImplementation("io.mockk:mockk:1.13.4")
+	testImplementation("com.github.tomakehurst:wiremock-jre8-standalone:3.0.1") {
+		exclude(group = "org.slf4j", module = "slf4j-api")
+		exclude(group = "org.slf4j", module = "slf4j-simple")
+	}
 }
 
 kotlin {
@@ -37,4 +42,5 @@ kotlin {
 
 tasks.withType<Test> {
 	useJUnitPlatform()
+	setJvmArgs(listOf("-XX:+EnableDynamicAgentLoading"))
 }
